deploy/k8s/base/server.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipyard-server
spec:
  selector:
    app: shipyard-server
  ports:
    - name: http
      port: 3000
      targetPort: http
