deploy/k8s/base/web.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipyard-web
spec:
  selector:
    app: shipyard-web
  ports:
    - name: http
      port: 80
      targetPort: http
